Fixed spacing

--- a/mystyle.css
+++ b/mystyle.css
@@ -161,7 +161,7 @@ p {
 .small-hero {
   min-height: auto;
   display: block;
-  padding: 60px 0 20px;
+  padding: 35px 0 20px;
 }
 
 /* ===== PAGE ===== */
